post: edit Period of the Day format for Java Temporal